Auth 1.6.12: tick-driven presence count + all blocking writes off the server thread (perf audit)
- Presence showed '0 pilots' with players online: offline-auth joins never called
  updatePlayerCount (only premium joins did), and a reconnected gateway session
  skipped re-sending presence (presenceSent not reset on close). Count is now
  pushed from the tab-list tick every 10 ticks (gateway coalesces + rate-limits)
  and presenceSent resets on close.
- Performance audit fixes (server-thread stall sources, all via new AsyncIo
  single writer thread, drained on ServerStopping before the DB pool closes):
  * ProfileStore.save() — sync remote-MySQL upsert per login/leave/name-change
  * AuditLogger.log() — re-read + re-hashed the WHOLE log file per line, per
    login; now an incremental running digest (identical checksum semantics)
  * TrustedIpStore.addTrustedIp() — sync INSERT+prune per offline login
- Audit verdict on the rest (no changes): Railguard O(1)/dirty-flag clean, Skins
  async HTTP clean, Discord stack async, tab list is the only per-tick handler.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>